2010-05-13  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp (Surface::Paint): delete render_list and ctx after
	we're done with them.

	* provider.cpp (RecomputePropertyValue): don't ref Setters and
	cause them to leak.

	* dependencyobject.cpp (SetName): don't leak the name Value*.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* value.cpp (Value::Copy): implement for MANAGED by creating a new
	gchandle for the target.
	(Value::FreeValue): implement for MANAGED by freeing the gchandle.

2010-05-13  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/install-dialog.cpp (install_xap): Install the unzipped
	Xap instead.

	* utils.cpp (UnzipByteArrayToDir): New convenience function to
	unzip the contents of a GByteArray to a directory.

	* xap.cpp (Unpack): Need to unzClose() the zipfile after a
	succesful extraction.

	* deployment.cpp (find_string): Removed.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* provider.cpp (StylePropertyValueProvider): clone the Value
	instances we put in our hash table so that we can control their
	lifetime and not access freed instances someone else owns and have
	already deleted.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (start_element): we need to set IsCDataVerbatim == true
	for OutOfBrowserSettings.Blurb in order for drt 8001 to pass.

	* runtime.h (Surface::GetSourceLocation): we need a
	cbinding/pinvoke for this.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/window-gtk.cpp: MoonWindowGtk::[de]install_application:
	set current deployment.

2010-05-11  Chris Toshok  <toshok@ximian.com>

	* pal/messaging/glib/pal-glib-msg.cpp (StateMachine::do_read): add
	a bit more info to the error message.
	(StateMachine::do_write): same.
	(MoonMessageListener::machine_finished_callback): stop using a
	"receiver_machine" instance variable.  it'll always point to the
	most recently created one.  we know which machine finished, it's
	the "data" parameter.